--- a/ImgurProject/app/src/main/res/values/strings.xml
+++ b/ImgurProject/app/src/main/res/values/strings.xml
@@ -2,5 +2,12 @@
     <string name="app_name">ImgurProject</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
-    <string name="title_activity_upload">UploadActivity</string>
+
+    <string name="title_activity_upload">Upload d'une photo</string>
+    <string name="upload_description">Prenez ou choisissez une photo, ecrivez là et uploadez là sur imgur</string>
+    <string name="button_take">Prendre une photo</string>
+    <string name="button_select">Choisir une photo</string>
+    <string name="button_write">Ecrire</string>
+    <string name="button_save">Enregistrer sur le tel</string>
+    <string name="button_upload">Poster sur imgur</string>
 </resources>
