Prise de photo et selection via gallerie
Possibilité de choisir une image via l'application gallerie du téléphone
Possibilité de prendre une photo (pas encore d'affichage)

Ajout de la police d'écriture Impact pour la futur écriture des images

--- a/ImgurProject/app/src/main/res/values/strings.xml
+++ b/ImgurProject/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="button_write">Ecrire</string>
     <string name="button_save">Sauver dans le tel</string>
     <string name="button_upload">Poster sur imgur</string>
+    <string name="foldername">ImgurProject</string>
 </resources>
