--- a/ImgurProject/app/src/main/res/values/strings.xml
+++ b/ImgurProject/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ImgurProject</string>
+    <string name="app_name">Memegur</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_upload">Upload d\'une photo</string>
@@ -8,6 +8,8 @@
     <string name="button_select">Choisir une photo</string>
     <string name="button_write">Ecrire</string>
     <string name="button_save">Sauver dans le tel</string>
-    <string name="button_upload">Poster sur imgur</string>
-    <string name="foldername">ImgurProject</string>
+    <string name="button_upload">Tel + imgur</string>
+    <string name="copy">Copier l\'url</string>
+    <string name="share">Partager l\'url</string>
+    <string name="saved">Image enregistrée dans le dossier Image</string>
 </resources>
