--- a/ImgurProject/app/src/main/res/values/strings.xml
+++ b/ImgurProject/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_upload">Upload d\'une photo</string>
+    <string name="title_activity_settings">Paramètres</string>
     <string name="upload_description">Prenez ou choisissez une photo, ecrivez là et uploadez là sur imgur</string>
     <string name="button_take">Prendre une photo</string>
     <string name="button_select">Choisir une photo</string>
@@ -15,4 +16,7 @@
     <string name="textLoader">Chargement...</string>
     <string name="loadingGif">LoadingGif</string>
     <string name="loadingFail">Oups, une erreur ...</string>
+    <string name="Top">Top</string>
+    <string name="Hot">hot</string>
+    <string name="User">User</string>
 </resources>
